apps/grocy/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  labels:
    app.kubernetes.io/name: grocy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grocy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grocy
    spec:
      nodeSelector:
        kubernetes.io/hostname: helium
      containers:
        - name: grocy
          image: linuxserver/grocy:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: config
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: grocy-config
