apps/grocy/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grocy
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Grocy
    gethomepage.dev/description: Groceries & Household
    gethomepage.dev/group: Applications
    gethomepage.dev/icon: grocy
    gethomepage.dev/href: https://grocy.cyphers.app
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`grocy.cyphers.app`)
      middlewares:
        - name: authentik-auth
          namespace: authentik
        - name: default-headers
          namespace: traefik
      services:
        - name: grocy
          namespace: grocy
          port: 80
  tls:
    secretName: production-cyphers-app-tls
